# af-opord-announce

./: .gitignore  Cargo.toml  README.md  Week7.json
merge-announce/: Cargo.toml
merge-announce/src/: main.rs
mk-announce/: Cargo.toml
mk-announce/src/: main.rs  week_msg.rs
mk-announce/www/: index.hbs  render.html
opord-parse/: Cargo.toml
opord-parse/benches/: opord_parse.rs
opord-parse/src/: activity.rs  lib.rs  opord_parser.rs  parser_error.rs  week_msg.rs
