[package]
name = "merge-announce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
eyre = "^0"
color-eyre = { version = "^0", default-features = false }
opord-parse = {path = "../opord-parse"}