[package]
name = "mk-announce"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opord-parse = {path = "../opord-parse"}
handlebars = "^4"
argh = "^0"
tracing = "^0"
tracing-subscriber = "^0"
eyre = "^0"
color-eyre = { version = "^0", default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
colored = "^2"

[profile.release]
lto = "yes"
opt-level = "s"